state for playerhandler